--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,7 @@ toml = "0.5.7"
 serde = "1.0.116"
 serde_derive = "1.0.116"
 spotr-sensing = { path = "../spotr-sensing", version = "0.1.0" }
+
+[target.x86_64-unknown-linux-gnu]
+linker = "/usr/bin/clang"
+rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
