--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,12 @@ edition = "2018"
 crate_type = ["dylib"]
 
 [dependencies]
-nix = "0.25.0"
-toml = "0.5.7"
-serde = "1.0.116"
-serde_derive = "1.0.116"
+nix = { version = "0.30.1", features = ["fs"] }
+toml = "0.9.8"
+serde = "1.0.228"
+serde_derive = "1.0.228"
+coz = "0.1"
 spotr-sensing = { path = "../spotr-sensing", version = "0.1.0" }
+
+[profile.release]
+debug = 1
